# Core

./: .gitignore  Dockerfile  DockerfileGithub  README.md  docker_build_python.py  engine.py  setup.cfg  vimsetup.md
Backtesting/: portfolio.py  strategy.py
Data Acquisition/: Contributing.md  Oct19Instructions.md  Top Level Instructions.md
Data Acquisition/0---Instructions/: Broad Websocket Instructions.md  Oct19Instructions.md  curr_ws_instructions.md
Data Acquisition/1---Websockets/: .gitignore  Binance_Websocket.py  Coinbase_Websocket.py  Gemini_Websocket.py  Kraken_Websocket.py  Kucoin_Websocket.py  Websocket_Class.py  binance.py  gemini.py  kraken.py  kucoin.py  main_script.py  web_socket.py
DockerCore/: Dockerfile
DockerDeskAlpha/: Dockerfile
Execution Platform/: CCXT_API.py  Contributing.md  Guidelines.md
Information Control/: .gitignore  Contributing.md
Information Control/cli/: app.py
Information Control/cli/controllers/: base.py  requirements.txt  web_socket.py
Ingest/: tradesocket.py
core/backtesting/: BollingerBandsMultiStock.py  EMAStrat.py  US10yrsbond.csv  US10yrsbond.parquet  asset.py  asset_trading_lib.py  dummy.py  portfolio.py  readme.md  stage.py  strategy.py
core/backtesting/backtester/: statistics.txt
core/backtesting/filtered/: a.ipynb  format_specifics.ipynb
core/backtesting/performance/: statistics.txt  transactions_log.txt
core/data_acquisition/: asdf.py  binance.py  ccxt_websocket.py  coinbase.py  gitignore  main_script.py
core/data_acquisition/AWS/: aws_wrappers.py
core/data_acquisition/Websockets/: binance.py  coinbase.py  gemini.py  kraken.py  kucoin.py  web_socket.py
core/data_acquisition/ccxtpro_websocket/: ccxttest.py  web_socket.py
core/data_acquisition/websocket_consumers/: file_ws_consumer.py  mp_queue_ws_consumer.py  print_ws_consumer.py  queue_ws_consumer.py  websocket_consumer.py  websocket_consumer_factory.py  zmq_ws_consumer.py
core/execution_platform/: CCXT_API.py  CCXT_APIv2.py  Contributing.md  ccxt_error.py  log_class.py
core/information_control/: cli.py  test.py
core/information_control/Server/: Server.py  ServerReporter.py  SlackBot.py
core/information_control/cli/: app.py
core/information_control/cli/controllers/: backtest.py  base.py  web_socket.py
core/information_control/desk_alpha_dockerfiles/: AidanVBollingerBandsMultistock
core/information_control/docker/: docker_build_python.py
core/information_control/mgr/: backtest_manager.py  backtest_worker.py  coinbase.py  interchange.py  manager.py  new_backtest.py  new_manager_test.py  new_worker.py  receive.py  send.py  status.py  utils.py  web_socket.py  web_socket_manager.py  web_socket_worker.py
core/information_control/mgr/process_managers/: backtest_manager.py  process_manager.py  web_socket_manager.py
core/information_control/mgr/server/: __init__.py
core/information_control/mgr/workers/: backtest_worker.py  web_socket_worker.py
core/information_control/server_health/: server_reporter.py
core/server/: app.py  broker.py  cli.py  client.py  docker_build_cpp.py  protocol.py  receive.py  send.py  utils.py
core/server/docker_build_cpp/: CMakeLists.txt  Dockerfile  docker_build_cpp.py  helloworld.cpp  helloworld.h.in
core/server/mgr/: __init__.py  manager.py  utils.py  web_socket_manager.py
core/server/mgr/process_managers/: backtest_manager.py  process_manager.py  web_socket_manager.py  websocket_manager.py
core/server/mgr/server/: __init__.py
core/server/mgr/workers/: backtest_worker.py  status.py
core/server/routers/: backtest.py  web_socket.py  websocket.py
core/server/workers/: backtest_worker.py  web_socket_worker.py  websocket_worker.py  worker.py
