[metadata]
name = core
description = slap that like button
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    core
    core.algorithm_interop
    core.backtesting
    core.data_acquisition
    core.execution_platform
    core.information_control
    core.information_control.mgr
    core.information_control.mgr.server
    core.information_control.mgr.process_managers
    core.information_control.mgr.workers
install_requires =
    click
    tabulate
    flask
    pandas
    pika
    aio-pika
    zmq
    requests
    termcolor
python_requires = >=3.7
zip_safe = no

[options.entry_points]
console_scripts = 
    nuft = core.information_control.cli:cli_run
    test_manager = core.information_control.mgr.manager:main
    test_server = core.information_control.mgr.server:main
    test_websocket = core.information_control.mgr.coinbase:main
    test_send = core.information_control.mgr.send:main
    test_receive = core.information_control.mgr.receive:main
    test_ws_manager = core.information_control.mgr.process_managers.web_socket_manager:main
    test_ws_worker = core.information_control.mgr.workers.web_socket_worker:main
    web-socket-worker = core.information_control.mgr.workers.web_socket_worker:cli_run
    test_interchange = core.information_control.mgr.interchange:main
    interchange = core.information_control.mgr.interchange:cli_run
    test_mgr_server = core.information_control.mgr.server:main
    manager_server = core.information_control.mgr.server:cli_run
    backtest-worker = core.information_control.mgr.workers.backtest_worker:cli_run