[metadata]
name = core
description = I Pledge Allegiance to the Bag
classifiers =
    Programming Language :: Python :: 3.10 :: Only

[options]
packages =
    core
    core.algorithm_interop
    core.backtesting
    core.data_acquisition
    core.execution_platform
    core.information_control
    core.information_control.mgr
    core.information_control.mgr.server
    core.information_control.mgr.process_managers
    core.information_control.mgr.workers
install_requires =
    click
    tabulate
    flask
    pandas
    requests
    psutil
    websockets
python_requires = >=3.10
zip_safe = no

[options.entry_points]
console_scripts = 
    nuft = core.information_control.cli:cli_run
    test_manager = core.information_control.mgr.manager:main
    test_server = core.information_control.mgr.server:main
    test_websocket = core.information_control.mgr.coinbase:main
    test_ws_manager = core.information_control.mgr.process_managers.web_socket_manager:main
    test_ws_worker = core.information_control.mgr.workers.web_socket_worker:main
    web-socket-worker = core.information_control.mgr.workers.web_socket_worker:cli_run
    test_mgr_server = core.information_control.mgr.server:main
    manager_server = core.information_control.mgr.server:cli_run
    backtest-worker = core.information_control.mgr.workers.backtest_worker:cli_run
