[metadata]
name = core
description = I Pledge Allegiance to the Bag
classifiers =
    Programming Language :: Python :: 3.10 :: Only

[options]
packages =
    core
    core.algorithm_interop
    core.backtesting
    core.data_acquisition
    core.execution_platform
    core.server
    core.server.routers
    core.server.mgr
    core.server.mgr.server
    core.server.mgr.process_managers
    core.server.workers
install_requires =
    click
    tabulate
    flask
    pandas
    requests
    psutil
    websockets
    ccxt
    zmq
    fastapi
    uvicorn[standard]
python_requires = >=3.10
zip_safe = no

[options.entry_points]
console_scripts = 
    nuft = core.server.cli:cli_run
    test_manager = core.server.mgr.manager:main
    test_server = core.server.app:main
    test_websocket = core.data_acquisition.ccxt_websocket:main
    test_ws_manager = core.server.mgr.process_managers.web_socket_manager:main
    test_ws_worker = core.server.workers.web_socket_worker:main
    web-socket-worker = core.server.workers.web_socket_worker:cli_run
    test_mgr_server = core.server.mgr.server:main
    manager_server = core.server.mgr.server:cli_run
    backtest-worker = core.server.mgr.workers.backtest_worker:cli_run
    ws_main_script = core.server.data_acquisition.main_script:main
    test_receive = core.server.receive:main
    test_send = core.server.send:main
